refactor: 移除 model/temperature/maxTokens 等模型相关配置
SDK 只通过 HTTP 与 Hermes 通讯，不涉及模型选择：
- HermesConfig: 移除 model/temperature/maxTokens/requireHttps
- HermesProperties: 同上
- HermesClient Builder: 同上
- ApiServerCore: 移除 X-Hermes-Model 请求头