@@ -19,9 +19,8 @@ import java.time.Duration;
  * 线程安全，支持重试，异常细分，日志完善
  * 
  * 用法:
- *   HermesClient hermes = new HermesClient.Builder()
+ *   HermesClient hermes = HermesClient.builder()
  *       .baseUrl("https://api.hermes.com")
- *       .apiKey(System.getenv("HERMES_API_KEY"))
  *       .maxRetries(3)
  *       .build();
  *   
@@ -44,318 +43,210 @@ public class HermesClient {
     
     // ========== Getters（供 Service 层使用）==========
     
-    /** 获取配置 */
     public HermesConfig getConfig() { return config; }
-    
-    /** 获取 HTTP 客户端 */
     public OkHttpClient getHttpClient() { return httpClient; }
-    
-    /** 获取 ObjectMapper */
     public ObjectMapper getObjectMapper() { return objectMapper; }
+    public String getBaseUrl() { return config.getBaseUrl(); }
     
     private OkHttpClient buildHttpClient(Builder builder) {
         return new OkHttpClient.Builder()
             .connectTimeout(Duration.ofSeconds(config.getConnectTimeout()))
             .readTimeout(Duration.ofSeconds(config.getReadTimeout()))
-            .retryOnConnectionFailure(false) // 我们自己处理重试
+            .retryOnConnectionFailure(false)
             .build();
     }
+    
+    // ========== 聊天接口 ==========
     
     /**
      * 简单聊天
      */
     public String chat(String message) {
         validateNotEmpty(message, "消息内容不能为空");
-        log.info("[{}] >>> chat() 请求: {}", LogEvents.CHAT_REQUEST, maskContent(message));
+        log.info("[{}] >>> chat() 请求: {}", LogEvents.HERMES_CHAT_REQUEST, maskContent(message));
         try {
-            String result = chatWithSystemPrompt(null, message);
-            log.info("[{}] <<< chat() 响应: {} chars", LogEvents.CHAT_RESPONSE, result.length());
-            return result;
+            OpenAIRequest request = new OpenAIRequest(message);
+            String response = doChat(request);
+            log.info("[{}] <<< chat() 响应: {} chars", LogEvents.HERMES_CHAT_RESPONSE, response.length());
+            return response;
         } catch (HermesException e) {
-            log.error("[{}] <<< chat() 失败: errorCode={}, httpStatus={}, msg={}", 
-                LogEvents.CHAT_ERROR, e.getErrorCode(), e.getHttpStatus(), e.getMessage());
+            log.error("[{}] <<< chat() 失败: errorCode={}, msg={}", 
+                LogEvents.HERMES_CHAT_ERROR, e.getErrorCode(), e.getMessage());
             throw e;
         }
     }
     
     /**
-     * 带 System Prompt 的聊天
+     * 带系统提示的聊天
      */
-    public String chatWithSystemPrompt(String systemPrompt, String userMessage) {
-        validateNotEmpty(userMessage, "用户消息不能为空");
-        
-        log.debug("[{}] systemPrompt={}, userMessage={}", 
-            LogEvents.CHAT_REQUEST,
-            systemPrompt != null ? "有" : "无", 
-            maskContent(userMessage));
-        
-        OpenAIRequest request = new OpenAIRequest();
-        request.setModel(config.getModel());
-        request.setTemperature(config.getTemperature());
-        request.setMaxTokens(config.getMaxTokens());
-        
-        if (systemPrompt != null && !systemPrompt.isBlank()) {
-            request.addSystemMessage(systemPrompt);
-        }
-        request.addUserMessage(userMessage);
-        
-        String json = toJson(request);
-        return executeWithRetry(request, json, 0);
-    }
-    
-    /**
-     * 带重试的请求执行
-     */
-    private String executeWithRetry(Object request, String json, int attempt) {
+    public String chatWithSystemPrompt(String systemPrompt, String message) {
+        validateNotEmpty(message, "消息内容不能为空");
+        log.info("[{}] >>> chatWithSystemPrompt() 请求: {}", LogEvents.HERMES_CHAT_REQUEST, maskContent(message));
         try {
-            String response = post("/v1/chat/completions", json);
-            return parseContent(response);
-        } catch (HermesAuthException e) {
-            // 认证错误，不重试
+            OpenAIRequest request = new OpenAIRequest(message, systemPrompt);
+            String response = doChat(request);
+            log.info("[{}] <<< chatWithSystemPrompt() 响应: {} chars", LogEvents.HERMES_CHAT_RESPONSE, response.length());
+            return response;
+        } catch (HermesException e) {
+            log.error("[{}] <<< chatWithSystemPrompt() 失败: errorCode={}, msg={}", 
+                LogEvents.HERMES_CHAT_ERROR, e.getErrorCode(), e.getMessage());
             throw e;
-        } catch (HermesNetworkException e) {
-            if (attempt < config.getMaxRetries()) {
-                int delay = (int) Math.pow(2, attempt) * 1000; // 指数退避: 1s, 2s, 4s
-                log.warn("[{}] attempt={}, delay={}ms, msg={}", 
-                    LogEvents.RETRY_NETWORK, attempt + 1, delay, e.getMessage());
-                sleep(delay);
-                return executeWithRetry(request, json, attempt + 1);
-            }
-            throw e;
-        } catch (HermesApiException e) {
-            if (isRetryable(e) && attempt < config.getMaxRetries()) {
-                int delay = (int) Math.pow(2, attempt) * 1000;
-                log.warn("[{}] attempt={}, delay={}ms, httpStatus={}, msg={}", 
-                    LogEvents.RETRY_API, attempt + 1, delay, e.getHttpStatus(), e.getMessage());
-                sleep(delay);
-                return executeWithRetry(request, json, attempt + 1);
-            }
-            throw e;
-        }
-    }
-    
-    private boolean isRetryable(HermesApiException e) {
-        // 429 Rate Limit, 500/502/503 Server Error 可重试
-        int status = e.getHttpStatus();
-        return status == 429 || status == 500 || status == 502 || status == 503;
-    }
-    
-    private void sleep(int millis) {
-        try {
-            Thread.sleep(millis);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
         }
     }
     
     /**
-     * 激活 Skill 并执行任务
+     * 激活 Skill（通过 system prompt）
      */
-    public String activateSkill(String skillName, String task) {
+    public String activateSkill(String skillName, String userMessage) {
         validateNotEmpty(skillName, "Skill 名称不能为空");
-        validateNotEmpty(task, "任务描述不能为空");
-        
-        log.info("[{}] skillName={}, task={}", 
-            LogEvents.SKILL_ACTIVATE, skillName, maskContent(task));
-        
-        String systemPrompt = String.format(
-            "先执行 skill_view(name='%s') 加载技能指南，然后严格按照技能指南执行任务。",
-            skillName
-        );
-        return chatWithSystemPrompt(systemPrompt, task);
+        validateNotEmpty(userMessage, "用户消息不能为空");
+        log.info("[{}] >>> activateSkill() skill={}, msg={}", LogEvents.HERMES_SKILL_ACTIVATE, skillName, maskContent(userMessage));
+        try {
+            OpenAIRequest request = OpenAIRequest.withSkill(skillName, userMessage);
+            String response = doChat(request);
+            log.info("[{}] <<< activateSkill() skill={} 成功, {} chars", LogEvents.HERMES_SKILL_ACTIVATE, skillName, response.length());
+            return response;
+        } catch (HermesException e) {
+            log.error("[{}] <<< activateSkill() skill={} 失败: errorCode={}, msg={}", 
+                LogEvents.HERMES_SKILL_ACTIVATE, skillName, e.getErrorCode(), e.getMessage());
+            throw e;
+        }
     }
     
     /**
-     * 多轮对话会话
+     * 执行聊天请求（带重试）
      */
-    public ChatSession newSession() {
-        log.debug("[{}]", LogEvents.SESSION_CREATE);
-        return new ChatSession(this, config);
+    private String doChat(OpenAIRequest request) {
+        int attempts = 0;
+        int maxRetries = config.getMaxRetries();
+        
+        while (true) {
+            try {
+                return executeChat(request);
+            } catch (HermesNetworkException e) {
+                attempts++;
+                if (attempts >= maxRetries) {
+                    log.error("[{}] <<< 重试次数用尽: attempt={}, msg={}", LogEvents.HERMES_CHAT_ERROR, attempts, e.getMessage());
+                    throw e;
+                }
+                long delayMs = (long) Math.pow(2, attempts - 1) * 1000;
+                log.warn("[{}] 重试: attempt={}/{}, delay={}ms, msg={}", 
+                    LogEvents.HERMES_RETRY_NETWORK, attempts, maxRetries, delayMs, e.getMessage());
+                try { Thread.sleep(delayMs); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); }
+            }
+        }
     }
     
     /**
-     * 线程安全的多轮对话会话
+     * 执行单次 HTTP 请求
      */
-    public ThreadSafeChatSession newThreadSafeSession() {
-        log.debug("[{}] threadSafe=true", LogEvents.SESSION_CREATE);
-        return new ThreadSafeChatSession(this, config);
+    private String executeChat(OpenAIRequest request) {
+        String json;
+        try {
+            json = objectMapper.writeValueAsString(request);
+        } catch (Exception e) {
+            throw new HermesApiException("JSON_ENCODE", -1, e.getMessage());
+        }
+        
+        RequestBody body = RequestBody.create(json, MediaType.parse("application/json"));
+        Request httpRequest = new Request.Builder()
+            .url(config.getBaseUrl() + "/v1/chat/completions")
+            .post(body)
+            .build();
+        
+        try (Response resp = httpClient.newCall(httpRequest).execute()) {
+            String responseBody = resp.body().string();
+            
+            if (!resp.isSuccessful()) {
+                throw new HermesApiException("CHAT", resp.code(), responseBody);
+            }
+            
+            JsonNode node = objectMapper.readTree(responseBody);
+            JsonNode choices = node.get("choices");
+            if (choices != null && choices.isArray() && choices.size() > 0) {
+                JsonNode message = choices.get(0).get("message");
+                if (message != null && message.has("content")) {
+                    return message.get("content").asText();
+                }
+            }
+            
+            return responseBody;
+            
+        } catch (HermesApiException e) {
+            throw e;
+        } catch (IOException e) {
+            throw new HermesNetworkException("executeChat", e);
+        }
     }
+    
+    // ========== 健康检查 ==========
     
     /**
      * 健康检查
      */
     public boolean healthCheck() {
-        log.info("[{}] url={}", LogEvents.HEALTH_CHECK, config.getBaseUrl() + "/api/hermes/health");
+        log.info("[{}] 健康检查", LogEvents.HERMES_HEALTH_CHECK);
         try {
-            String url = config.getBaseUrl() + "/api/hermes/health";
             Request request = new Request.Builder()
-                .url(url)
+                .url(config.getBaseUrl() + "/health")
                 .get()
                 .build();
             
-            try (Response response = httpClient.newCall(request).execute()) {
-                boolean healthy = response.isSuccessful();
-                log.info("[{}] result={}, httpStatus={}", 
-                    LogEvents.HEALTH_CHECK, healthy, response.code());
+            try (Response resp = httpClient.newCall(request).execute()) {
+                boolean healthy = resp.isSuccessful();
+                log.info("[{}] 健康检查: {}", LogEvents.HERMES_HEALTH_CHECK, healthy);
                 return healthy;
             }
         } catch (IOException e) {
-            log.warn("[{}] failed: {}", LogEvents.HEALTH_CHECK, e.getMessage());
+            log.warn("[{}] 健康检查失败: {}", LogEvents.HERMES_HEALTH_CHECK, e.getMessage());
             return false;
         }
     }
     
+    // ========== 会话支持 ==========
+    
     /**
-     * 发送 HTTP POST 请求
+     * 创建普通会话
      */
-    private String post(String path, String json) {
-        String url = config.getBaseUrl() + path;
-        
-        RequestBody body = RequestBody.create(json, MediaType.get("application/json"));
-        Request request = new Request.Builder()
-            .url(url)
-            .post(body)
-            .addHeader("Authorization", "Bearer " + maskToken(config.getApiKey()))
-            .addHeader("Content-Type", "application/json")
-            .build();
-        
-        try (Response response = httpClient.newCall(request).execute()) {
-            int status = response.code();
-            
-            if (status == 401) {
-                throw new HermesAuthException("API Key 无效或已过期");
-            }
-            
-            if (status == 403) {
-                throw new HermesAuthException("API Key 权限不足");
-            }
-            
-            if (!response.isSuccessful()) {
-                String errorBody = response.body() != null ? response.body().string() : "无响应体";
-                throw new HermesApiException("API 请求失败", status);
-            }
-            
-            return response.body().string();
-        } catch (IOException e) {
-            throw new HermesNetworkException("网络请求失败: " + e.getMessage(), e);
-        }
+    public ChatSession newSession() {
+        return new ChatSession(this);
     }
     
     /**
-     * 解析响应内容
+     * 创建线程安全会话
      */
-    private String parseContent(String response) {
-        try {
-            JsonNode node = objectMapper.readTree(response);
-            
-            // 检查错误响应
-            if (node.has("error")) {
-                JsonNode error = node.get("error");
-                String message = error.has("message") ? error.get("message").asText() : "未知错误";
-                throw new HermesApiException("API_ERROR", message, -1);
-            }
-            
-            JsonNode choices = node.get("choices");
-            if (choices == null || !choices.isArray() || choices.isEmpty()) {
-                throw new HermesApiException("响应格式错误：缺少 choices 字段", -1);
-            }
-            
-            JsonNode message = choices.get(0).get("message");
-            if (message == null || !message.has("content")) {
-                throw new HermesApiException("响应格式错误：缺少 message.content 字段", -1);
-            }
-            
-            return message.get("content").asText();
-        } catch (HermesApiException e) {
-            throw e;
-        } catch (IOException e) {
-            throw new HermesApiException("解析响应失败: " + e.getMessage(), -1, e);
-        }
+    public ThreadSafeChatSession newThreadSafeSession() {
+        return new ThreadSafeChatSession(this);
     }
     
-    /**
-     * 对象转 JSON
-     */
-    private String toJson(Object obj) {
-        try {
-            return objectMapper.writeValueAsString(obj);
-        } catch (Exception e) {
-            throw new HermesApiException("序列化请求失败: " + e.getMessage(), -1, e);
-        }
-    }
+    // ========== 工具方法 ==========
     
-    /**
-     * 校验非空
-     */
     private void validateNotEmpty(String value, String message) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             throw new IllegalArgumentException(message);
         }
     }
     
-    /**
-     * Token 脱敏
-     */
-    private String maskToken(String token) {
-        if (token == null || token.length() < 8) {
-            return "***";
-        }
-        return token.substring(0, 4) + "***" + token.substring(token.length() - 4);
-    }
-    
-    /**
-     * 内容脱敏（截断长文本）
-     */
     private String maskContent(String content) {
         if (content == null) return "null";
-        if (content.length() <= 50) return content;
-        return content.substring(0, 50) + "...(length=" + content.length() + ")";
+        if (content.length() <= 100) return content;
+        return content.substring(0, 100) + "...";
     }
     
-    // ========== Getter ==========
+    // ========== Builder ==========
     
-    public HermesConfig getConfig() {
-        return config;
-    }
-    
-    public String getBaseUrl() {
-        return config.getBaseUrl();
-    }
-    
-    public String getModel() {
-        return config.getModel();
-    }
-    
-    /**
-     * Builder
-     */
     public static Builder builder() {
         return new Builder();
     }
     
     public static class Builder {
         private String baseUrl = "http://localhost:8080";
-        private String apiKey;
-        private String model = "gpt-4";
         private int connectTimeout = 30;
         private int readTimeout = 180;
-        private double temperature = 0.7;
-        private int maxTokens = 4096;
         private int maxRetries = 3;
-        private boolean requireHttps = true;
         
         public Builder baseUrl(String baseUrl) {
             this.baseUrl = baseUrl;
-            return this;
-        }
-        
-        public Builder apiKey(String apiKey) {
-            this.apiKey = apiKey;
-            return this;
-        }
-        
-        public Builder model(String model) {
-            this.model = model;
             return this;
         }
         
@@ -369,23 +260,8 @@ public class HermesClient {
             return this;
         }
         
-        public Builder temperature(double temperature) {
-            this.temperature = temperature;
-            return this;
-        }
-        
-        public Builder maxTokens(int maxTokens) {
-            this.maxTokens = maxTokens;
-            return this;
-        }
-        
         public Builder maxRetries(int maxRetries) {
             this.maxRetries = maxRetries;
-            return this;
-        }
-        
-        public Builder requireHttps(boolean require) {
-            this.requireHttps = require;
             return this;
         }
         
